hphp/test/zend/good/ext/calendar/tests/jdtojulian.php
<?php
echo jdtojulian(0). "\n";
echo jdtojulian(2298874). "\n";
echo jdtojulian(2299151). "\n";
echo jdtojulian(2440588). "\n";
echo jdtojulian(2816423). "\n";
?>