hphp/test/zend/bad/zend-constants/dir-constant-eval.php
<?php
eval('echo __DIR__ . "\n";');
?>